[package]
name = "window_pet"
version = "0.0.6"
description = "Window Pet"
authors = ["SeakMengs"]
license = "MIT"
repository = "https://github.com/SeakMengs/WindowPet"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.3", features = [ "protocol-asset", "process-relaunch", "updater", "window-all", "dialog-all", "fs-all", "path-all", "macos-private-api", "system-tray", "shell-open"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
mouse_position = "0.1.3"
log = "^0.4.20"
open = "5.0.1"
tokio = "1.35.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
